# llmcourse-hw7-mcp-evenodd-league-agents

./: .env.example  .gitignore  CHANGELOG.md  COMPLETE_FILE_DOCUMENTATION_AND_PROTOCOL_FLOW.md  CONTRIBUTING.md  DESIGN.md  IMPLEMENTATION_SUMMARY.md  PRD.md  QUICKSTART.md  README.md  SECURITY.md  SELF_ASSESSMENT.md  TASKS.md  benchmark_results.json  pyproject.toml  requirements.txt  setup.sh
code snippet/: GAME_MOVE_CALL.json  GAME_MOVE_RESPONSE.json  Handling_auth_errors.py  LEAGUE_QUERY.json  LEAGUE_QUERY_RESPONSE.json  agent_P01.log.jsonl  agent_version.json  agents_config.json  agents_run.text  auth_token.json  basic_mcp_server.py  choose_parity_call.json  choose_parity_response.json  circuit_breaker.py  config_loader.py  config_models_agents.py  config_models_league.py  config_models_system.py  dataclass_network_config.py  envelop.json  game_error.json  game_invitation.json  game_join_ack.json  game_over.json  game_registration.json  games_registry.json  jsonl_logger.py  league.log.jsonl  league_completed.json  league_error.json  league_manager.py  league_register_request.json  league_register_response.json  league_standings_update.json  logger_usage_example.py  match_R1M1.json  match_result_report.json  mcp_tool_caller.py  player.json  player_P01_history.json  (+25 more)
doc/: protocol-spec.md
docs/: API.md  BENCHMARKS.md  SECURITY_ARCHITECTURE.md
scripts/: benchmark.py  start_league.py
tests/: test_async_handlers.py  test_coverage_boost.py  test_easy_coverage.py  test_integration.py  test_jwt_auth.py  test_league_manager.py  test_league_manager_async.py  test_mcp_client.py  test_player.py  test_player_handlers.py  test_player_handlers_async.py  test_referee.py  test_sdk.py  (+1 more)
(+46 files in other folders)
